--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .vs/
 bin/
 obj/
+.sonar/
+.sonarqube/
+TestResults/
+coverage/
+*.trx
+*.coverage
+*.coveragexml
+coverage.json
+coverage.cobertura.xml
